--- a/java/maven/pom.xml
+++ b/java/maven/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.gicappa</groupId>
 	<artifactId>superpom</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0</version>
+	<version>1.0.2</version>
 	<name>gicappa Super POM</name>
 	<inceptionYear>2013</inceptionYear>
 	<organization>
@@ -198,6 +198,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjrt</artifactId>
+				<version>${org.aspectj-version}</version>
+			</dependency>	
 			<dependency>
 				<groupId>aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
@@ -444,6 +449,45 @@
 				<artifactId>javassist</artifactId>
 				<version>3.12.0.GA</version>
 			</dependency>
+	        <dependency>
+	            <groupId>javax.inject</groupId>
+	            <artifactId>javax.inject</artifactId>
+	            <version>1</version>
+	        </dependency>
+			<dependency>
+				<groupId>org.apache.tomcat</groupId>
+				<artifactId>tomcat-servlet-api</artifactId>
+				<version>7.0.30</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet.jsp</groupId>
+				<artifactId>jsp-api</artifactId>
+				<version>2.1</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet.jsp.jstl</groupId>
+				<artifactId>jstl-api</artifactId>
+				<version>1.2</version>
+				<exclusions>
+					<exclusion>
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.web</groupId>
+				<artifactId>jstl-impl</artifactId>
+				<version>1.2</version>
+				<exclusions>
+					<exclusion>
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>			
 		</dependencies>
 	</dependencyManagement>
 	<properties>
@@ -452,6 +496,7 @@
 		<hibernate.version>4.1.10.Final</hibernate.version>
 		<hibernate-annotations.version>3.5.6-Final</hibernate-annotations.version>
 		<slf4j.version>1.5.11</slf4j.version>
+		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
